Fix x clipping in apps

--- a/_embed/templates/user-settings/stylesheet/app.css
+++ b/_embed/templates/user-settings/stylesheet/app.css
@@ -66,6 +66,7 @@ main {
 	flex-shrink:1;
 	min-height:400px;
 	padding:0px 12px 12px 24px;
+	overflow-x:clip;
 }
 
 .app.page .app-content {
